<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/record"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recording"/>
    <item
        android:id="@+id/stop_recording"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/end_recording"/>
    <item
        android:id="@+id/begin_manuver"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/manouver"/>
    <item
        android:id="@+id/end_manouver"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/stop_manouver"/>

</menu>
